# inline-assist.nvim

./: .gitignore  README.md
rplugin/python3/: diff.py  llm.py  plugin.py  prompting.py  pyproject.toml
rplugin/python3/structs/: diagnostic.py
