[project]
name = "inline-assist.nvim"
version = "0.1.0"
description = "Inline assist mode for Neovim"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88

# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`)
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []
