[project]
name = "inline-assist.nvim"
version = "0.1.0"
description = "Inline assist mode for Neovim"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88

lint.select = [
    "E", # pycodestyle
    "F", # flake
    "I", # isort
]
lint.ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []
